@@ -1,3 +1,10 @@
+Mon Nov 16 01:06:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* thread_pthread.c (native_cond_timedwait): use timeval instead of
+	  timespec.
+
+	* thread_win32.c (ruby_native_cond_timedwait): added.
+
 Mon Nov 16 01:04:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/public_object.h (ruby_public_object_vmkey): moved
